# etf-helper

./: .gitignore  FIX_GIT.md  README.md  SETUP_GIT.md  SETUP_GIT_USER.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  ci.yml  frontend.yml
.github/workflows/templates/: README.md  backend-template.yml  frontend-template.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: etf.py  health.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: etf.py
backend/app/schemas/: response.py
docs/: BACKEND_DEPLOYMENT.md  CI_CD.md  CI_CD_FIX.md  CI_CD_IMPROVEMENTS.md  CI_CD_SETUP.md  CI_CD_TEMPLATE_GUIDE.md  CI_CD_TROUBLESHOOTING.md  CONVENTIONS.md  DESIGN_SYSTEM.md  ERROR_BOUNDARY.md  PLANNING.md  QUICK_START_CI_CD.md  SENIOR_FRONTEND_SETUP.md  SETUP_CHECKLIST.md  VERCEL_DEPLOYMENT.md  VERCEL_TOKEN_GUIDE.md  WORKPLAN.md
frontend/: .env.example  .eslintrc.json  .prettierignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/utils/: format.ts
frontend/src/providers/: Providers.tsx
frontend/src/types/: index.ts
